--- a/res/layout/activity_start_new_game.xml
+++ b/res/layout/activity_start_new_game.xml
@@ -100,7 +100,7 @@
                 android:text="@string/cancel" />
 
             <Button
-                android:id="@+id/buttonCreateStartGame"
+                android:id="@+id/buttonStartGame"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/start_game" />
