Add In-game screen

--- a/res/layout/activity_start_new_round.xml
+++ b/res/layout/activity_start_new_round.xml
@@ -16,6 +16,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1"
-        android:textAppearance="?android:attr/textAppearanceLarge" />   
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Button
+        android:id="@+id/buttonSkip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/skip" />
 
 </LinearLayout>
