--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,12 +8,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -43,5 +37,12 @@
                 android:text="@string/how_to_play" />
         </TableRow>
     </TableLayout>
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="100dip"
+        android:src="@drawable/logo" />
 
 </FrameLayout>
