--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -38,5 +38,12 @@
         </TableRow>
     </TableLayout>
 
-    
+    <ImageView
+        android:id="@+id/imageViewLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="50dip"
+        android:src="@drawable/logo" />
+
 </FrameLayout>
