--- a/res/layout/activity_start_new_round.xml
+++ b/res/layout/activity_start_new_round.xml
@@ -23,7 +23,7 @@
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/lblRoundNum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1"
