--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="50dip"
+        android:contentDescription="@string/logo"
         android:src="@drawable/logo" />
 
 </FrameLayout>
