--- a/res/layout/activity_start_new_game.xml
+++ b/res/layout/activity_start_new_game.xml
@@ -8,12 +8,12 @@
         android:layout_height="wrap_content" >
 
         <TableRow
-            android:id="@+id/tableRow3"
+            android:id="@+id/tableRow1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/point_limit"
@@ -28,21 +28,19 @@
         </TableRow>
 
         <TextView
-            android:id="@+id/textView3.1"
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/start_new_game_point_limit_description"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-        
-
         <TableRow
-            android:id="@+id/tableRow5"
+            android:id="@+id/tableRow2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/max_players"
@@ -57,14 +55,14 @@
         </TableRow>
 
         <TextView
-            android:id="@+id/textView5.1"
+            android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/start_new_game_max_players_description"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TableRow
-            android:id="@+id/tableRow9"
+            android:id="@+id/tableRow3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
@@ -75,10 +73,10 @@
                 android:text="@string/cancel" />
 
             <Button
-                android:id="@+id/buttonStartGame"
+                android:id="@+id/buttonNext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/start_game" />
+                android:text="@string/next" />
         </TableRow>
     </TableLayout>
 
