--- a/res/layout/activity_ingame.xml
+++ b/res/layout/activity_ingame.xml
@@ -35,28 +35,58 @@
             android:background="@drawable/bg"
             android:orientation="horizontal" >
 
-            <Button
-                android:id="@+id/buttonLeft"
-                android:layout_width="0dip"
-                android:layout_height="200dip"
-                android:layout_weight="1"
-                android:text="@string/left" />
+            
+           	<LinearLayout
+           	    android:layout_width="fill_parent"
+           	    android:layout_height="fill_parent"
+           	    android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/buttonCard"
-                android:layout_width="100dip"
-                android:layout_height="300dip"
-                android:layout_weight="2"
-                android:background="@color/whiteT"
-                android:text=""
-                android:textColor="@color/black" />
+           		<Button
+           		    android:id="@+id/buttonLeft"
+           		    android:layout_width="0dip"
+           		    android:layout_height="200dip"
+           		    android:layout_gravity="center"
+           		    android:layout_weight="1"
+           		    android:text="@string/left" />
+	
+				<RelativeLayout
+				    android:layout_width="wrap_content"
+				    android:layout_height="match_parent" >
 
-            <Button
-                android:id="@+id/buttonRight"
-                android:layout_width="0dip"
-                android:layout_height="200dip"
-                android:layout_weight="1"
-                android:text="@string/right" />
+					<Button
+		                android:id="@+id/buttonCard"
+		                android:layout_width="250dip"
+		                android:layout_height="300dip"
+		                android:layout_weight="2"
+		                android:layout_centerHorizontal="true"
+		                android:background="@color/whiteT"
+		                android:text=""
+		                android:textColor="@color/black" />
+
+					<Button
+					    android:id="@+id/buttonSubmit"
+					    android:layout_width="wrap_content"
+					    android:layout_height="wrap_content"
+					    android:layout_alignParentBottom="true"
+					    android:layout_centerHorizontal="true"
+					    android:background="@color/green"
+					    android:text="@string/submit"
+					    android:textColor="@color/white" />
+
+				</RelativeLayout>
+				
+	
+	
+	            <Button
+	                android:id="@+id/buttonRight"
+	                android:layout_width="0dip"
+	                android:layout_height="200dip"
+	                android:layout_gravity="center"
+	                android:layout_weight="1"
+	                android:text="@string/right" />
+           	</LinearLayout>
+            
+
         </LinearLayout>
     </TableLayout>
 
