added test functionality to submit button

--- a/res/layout/activity_ingame.xml
+++ b/res/layout/activity_ingame.xml
@@ -71,7 +71,8 @@
 					    android:layout_centerHorizontal="true"
 					    android:background="@color/green"
 					    android:text="@string/submit"
-					    android:textColor="@color/white" />
+					    android:textColor="@color/white"
+					    android:visibility="gone" />
 
 				</RelativeLayout>
 				
