layout changes (inGameActivity)

--- a/res/layout/activity_ingame.xml
+++ b/res/layout/activity_ingame.xml
@@ -1,96 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="wrap_content" >
 
-    <TableLayout
-        android:layout_width="fill_parent"
+    <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:id="@+id/textViewQuestion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-        </TableRow>
-
         <TextView
-            android:id="@+id/textView3.1"
+            android:id="@+id/textViewQuestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/helperInGame"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </TableRow>
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="300dip"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp"
-            android:background="@drawable/bg"
-            android:orientation="horizontal" >
+    <TextView
+        android:id="@+id/textView3.1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/helperInGame"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
-            
-           	<LinearLayout
-           	    android:layout_width="fill_parent"
-           	    android:layout_height="fill_parent"
-           	    android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:background="@drawable/bg"
+        android:orientation="horizontal" >
 
-           		<Button
-           		    android:id="@+id/buttonLeft"
-           		    android:layout_width="0dip"
-           		    android:layout_height="200dip"
-           		    android:layout_gravity="center"
-           		    android:layout_weight="1"
-           		    android:text="@string/left" />
-	
-				<RelativeLayout
-				    android:layout_width="wrap_content"
-				    android:layout_height="match_parent" >
+        <Button
+            android:id="@+id/buttonLeft"
+            android:layout_width="0dip"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight=".2"
+            android:text="@string/left" />
 
-					<Button
-		                android:id="@+id/buttonCard"
-		                android:layout_width="250dip"
-		                android:layout_height="300dip"
-		                android:layout_weight="2"
-		                android:layout_centerHorizontal="true"
-		                android:background="@color/whiteT"
-		                android:text=""
-		                android:textColor="@color/black" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent" >
 
-					<Button
-					    android:id="@+id/buttonSubmit"
-					    android:layout_width="wrap_content"
-					    android:layout_height="wrap_content"
-					    android:layout_alignParentBottom="true"
-					    android:layout_centerHorizontal="true"
-					    android:paddingLeft="15dip"
-					    android:paddingRight="15dip"
-					    android:background="@color/green"
-					    android:text="@string/submit"
-					    android:textColor="@color/white"
-					    android:visibility="gone" />
+            <Button
+                android:id="@+id/buttonCard"
+                android:layout_width="200dip"
+                android:layout_height="fill_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/whiteT"
+                android:text=""
+                android:textColor="@color/black" />
 
-				</RelativeLayout>
-				
-	
-	
-	            <Button
-	                android:id="@+id/buttonRight"
-	                android:layout_width="0dip"
-	                android:layout_height="200dip"
-	                android:layout_gravity="center"
-	                android:layout_weight="1"
-	                android:text="@string/right" />
-           	</LinearLayout>
-            
+            <Button
+                android:id="@+id/buttonSubmit"
+                android:layout_width="200dip"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:background="@color/green"
+                android:paddingLeft="15dip"
+                android:paddingRight="15dip"
+                android:text="@string/submit"
+                android:textColor="@color/white"
+                android:visibility="gone" />
+        </RelativeLayout>
 
-        </LinearLayout>
-    </TableLayout>
+        <Button
+            android:id="@+id/buttonRight"
+            android:layout_width="0dip"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight=".2"
+            android:text="@string/right" />
+    </LinearLayout>
 
-</ScrollView>
+</TableLayout>
