--- a/res/layout/activity_player_turn.xml
+++ b/res/layout/activity_player_turn.xml
@@ -1,41 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal" >
+    android:gravity="center" >
 
-    <TableLayout
+    <TableRow
+        android:id="@+id/tableRow1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" >
+        android:gravity="center" >
 
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" 
-            android:gravity="center">
+        <TextView
+            android:id="@+id/textViewPlayerIndex"
+            android:layout_width="wrap_content"
+            android:layout_height="50dip"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </TableRow>
 
-            <TextView
-                android:id="@+id/textViewPlayerIndex"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-        </TableRow>
+    <TableRow
+        android:id="@+id/tableRow2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center" >
 
-        <TableRow
-            android:id="@+id/tableRow2"
-            android:layout_width="fill_parent"
+        <Button
+            android:id="@+id/buttonContinue"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center" >
+            android:background="@color/greenT"
+            android:text="@string/skip" />
+    </TableRow>
 
-            <Button
-                android:id="@+id/buttonContinue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/greenT"
-                android:text="@string/skip" />
-        </TableRow>
-    </TableLayout>
-
-</RelativeLayout>
+</TableLayout>
