--- a/res/layout/activity_start_new_round.xml
+++ b/res/layout/activity_start_new_round.xml
@@ -17,7 +17,7 @@
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dip"
                 android:gravity="right"
                 android:text="@string/round"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -25,8 +25,7 @@
             <TextView
                 android:id="@+id/lblRoundNum"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1"
+                android:layout_height="50dip"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
         </TableRow>
 
