--- a/res/layout/activity_player_turn.xml
+++ b/res/layout/activity_player_turn.xml
@@ -11,7 +11,7 @@
         android:gravity="center" >
 
         <TextView
-            android:id="@+id/textViewPlayerIndex"
+            android:id="@+id/textViewPlayerTurnMessage"
             android:layout_width="wrap_content"
             android:layout_height="50dip"
             android:text=""
