display player name right before a new round

--- a/res/layout/activity_start_new_round.xml
+++ b/res/layout/activity_start_new_round.xml
@@ -31,6 +31,26 @@
 
         <TableRow
             android:id="@+id/tableRow2"
+            android:layout_width="fill_parent" >
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="50dip"
+                android:gravity="right"
+                android:text="@string/its_your_turn"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/textViewPlayerName"
+                android:layout_width="wrap_content"
+                android:layout_height="50dip"
+                android:text="@string/round"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow3"
             android:layout_width="fill_parent"
             android:gravity="center" >
 
