show card # and small design changes

--- a/res/layout/activity_ingame.xml
+++ b/res/layout/activity_ingame.xml
@@ -70,7 +70,7 @@
                 android:visibility="gone" />
 
             <TextView
-                android:id="@+id/textViewOwner"
+                android:id="@+id/textViewAditionalInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
