--- a/res/layout/activity_player_turn.xml
+++ b/res/layout/activity_player_turn.xml
@@ -14,7 +14,7 @@
         <TextView
             android:id="@+id/textViewPlayerTurnMessage"
             android:layout_width="wrap_content"
-            android:layout_height="50dip"
+            android:layout_height="wrap_content"
             android:text=""
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </TableRow>
@@ -42,10 +42,14 @@
 
         <Button
             android:id="@+id/buttonContinue"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:background="@color/greenT"
-            android:text="@string/skip" />
+            android:layout_weight="1"
+            android:text="@string/skip" 
+            android:layout_marginTop="5dip"
+            android:layout_marginLeft="5dip"
+            android:layout_marginRight="5dip"/>
     </TableRow>
 
 </TableLayout>
