--- a/res/layout/activity_ingame.xml
+++ b/res/layout/activity_ingame.xml
@@ -65,7 +65,7 @@
                 android:background="@color/green"
                 android:paddingLeft="15dip"
                 android:paddingRight="15dip"
-                android:text="@string/submit"
+                android:text="@string/choose"
                 android:textColor="@color/white"
                 android:visibility="gone" />
 
@@ -78,7 +78,6 @@
                 android:layout_marginBottom="55dp"
                 android:paddingLeft="15dip"
                 android:paddingRight="15dip"
-                android:text="@string/submit"
                 android:textColor="@color/white"
                 android:visibility="gone" />
         </RelativeLayout>
