--- a/res/layout/activity_start_new_game.xml
+++ b/res/layout/activity_start_new_game.xml
@@ -10,12 +10,12 @@
 
         <TableRow
             android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/max_players"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -23,12 +23,12 @@
 
         <TableRow
             android:id="@+id/tableRow2"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/start_new_game_max_players_description"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -36,24 +36,27 @@
 
         <TableRow
             android:id="@+id/tableRow3"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
             <NumberPicker
                 android:id="@+id/numberPickerPlayers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dip"
+                android:layout_marginRight="30dip"
+                android:gravity="center"
                 android:orientation="horizontal" />
         </TableRow>
 
         <TableRow
             android:id="@+id/tableRow4"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/point_limit"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -61,12 +64,12 @@
 
         <TableRow
             android:id="@+id/tableRow5"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/textView1"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/start_new_game_point_limit_description"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -74,19 +77,22 @@
 
         <TableRow
             android:id="@+id/tableRow6"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
             <NumberPicker
                 android:id="@+id/numberPickerPointLimit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dip"
+                android:layout_marginRight="30dip"
+                android:gravity="center"
                 android:orientation="horizontal" />
         </TableRow>
 
         <TableRow
             android:id="@+id/tableRow7"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
             <Button
