--- a/res/layout/activity_start_new_game.xml
+++ b/res/layout/activity_start_new_game.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
     <TableLayout
@@ -43,8 +43,8 @@
                 android:id="@+id/numberPickerPlayers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dip"
-                android:layout_marginRight="30dip"
+                android:layout_marginLeft="75dip"
+                android:layout_marginRight="75dip"
                 android:gravity="center"
                 android:orientation="horizontal" />
         </TableRow>
@@ -84,8 +84,8 @@
                 android:id="@+id/numberPickerPointLimit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dip"
-                android:layout_marginRight="30dip"
+                android:layout_marginLeft="75dip"
+                android:layout_marginRight="75dip"
                 android:gravity="center"
                 android:orientation="horizontal" />
         </TableRow>
